added board creation in script

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <button id="no-solve">No</button>
         </div>
 
-        <table id="board">
+        <table id="board"></table>
+
+        <!-- <table id="board">
             <tr>
                 <td id="test" class="box" contenteditable></td>
                 <td class="box" contenteditable></td>
@@ -295,6 +297,6 @@
                     contenteditable
                 ></td>
             </tr>
-        </table>
+        </table> -->
     </body>
 </html>
