--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Sudoku Solver</title>
         <link rel="stylesheet" href="sudoku.css" />
         <link
             href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap"
