--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
         </div>
 
         <div id="confirm-new-game">
-            <span><b>Are you sure you want a new game?</b></span>
-            <button id="yes-new-game">Yes</button>
-            <button id="no-new-game">No</button>
+            <div><b>Are you sure you want a new game?</b></div>
+            <div class="yes-no">
+                <button id="yes-new-game" class="yes">Yes</button>
+                <button id="no-new-game" class="no">No</button>
+            </div>
         </div>
 
         <div id="confirm-solve">
-            <span><b>Are you sure you want to auto-solve?</b></span>
-            <button id="yes-solve">Yes</button>
-            <button id="no-solve">No</button>
+            <div><b>Are you sure you want to auto-solve?</b></div>
+            <div class="yes-no">
+                <button id="yes-solve" class="yes">Yes</button>
+                <button id="no-solve" class="no">No</button>
+            </div>
         </div>
 
         <div></div>
