implemented check button

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
             </div>
         </div>
 
+        <div id="check-msg">
+            <p id="check-correct">The current board is correct. Great job!</p>
+            <p id="check-wrong">
+                The current board is wrong. You have
+                <span id="error-count">10</span> error(s).
+            </p>
+        </div>
+
         <div></div>
 
         <table id="board"></table>
